# pencaucu

./: .gitignore  HELP.md  README.md  docker-compose.yml
backend/: Dockerfile  dummy_data_inserts.sql  dummy_data_inserts.txt  init.sql  pom.xml
backend/src/main/java/com/bd/pencaucu/: PencaucuApplication.java
backend/src/main/java/com/bd/pencaucu/config/: RedisConfig.java  SecurityConfig.java  SecurityFilter.java  TokenProvider.java  WebConfig.java
backend/src/main/java/com/bd/pencaucu/controllers/: AdminController.java  AuthController.java  BetController.java  CareerController.java  GroupController.java  GroupStageController.java  LoginController.java  MatchController.java  (+9 more)
backend/src/main/resources/: application.properties
backend/src/test/java/com/bd/pencaucu/: PencaucuApplicationTests.java
frontend/: Cargo.toml  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.rs
frontend/src/models/: auth_model.rs  bet_model.rs  career_model.rs  group_stage_model.rs  match_model.rs  mod.rs  player_model.rs  result_model.rs  stadium_model.rs  stage_model.rs  team_model.rs
frontend/src/routes/: admin_route.rs  bets_route.rs  login_route.rs  matches_route.rs  mod.rs  profile_route.rs  ranking_route.rs  register_route.rs  upload_match_route.rs  upload_result_route.rs
frontend/src/services/: auth_service.rs  bet_service.rs  bets_service.rs  career_service.rs  login_service.rs  match_service.rs  mod.rs  player_service.rs  register_service.rs  result_service.rs  stadium_service.rs  stage_service.rs  team_service.rs
(+116 files in other folders)
