[package]
name = "leptos-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.12", features = ["csr"] }
leptos_meta = { version = "0.6.12", features = ["csr"]}
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
chrono = "0.4.38"
